2 files modified, 5 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<app-navbar name="{{name}}"></app-navbar>
+<hr/>
+<router-outlet></router-outlet>
