--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,38 @@
-<p>
-navbar works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" [routerLink]="['/']"> {{name}}</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" [routerLink]="['/']">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/cadastro-usuario']">Cadastro de usuário</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/cadastro-profissional']">Cadastro de profissional</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/agendamentos']">Agendamentos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/sobre']">Sobre</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/sair']">Sair</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
