--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
           <a class="nav-link active" aria-current="page" [routerLink]="['/']">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/cadastro-usuario']">Cadastro de usuário</a>
+          <a class="nav-link" [routerLink]="['/cadastro-cliente']">Cadastro de cliente</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/cadastro-profissional']">Cadastro de profissional</a>
