--- a/src/app/components/cadastro-cliente/cadastro-cliente.component.html
+++ b/src/app/components/cadastro-cliente/cadastro-cliente.component.html
@@ -7,23 +7,22 @@
   </head>
   <body>
   <div class="container-fluid">
-  <h5>Cadastro de cliente</h5>
-  <input #input type="text" />
-  <ul>
+    <form>
+      <h5>Cadastro de cliente</h5>
+      <label for="name">Nome completo:</label><br>
+      <input #input type="text" id="name"/><br><br>
+      <label for="cpf">CPF:</label><br>
+      <input #input type="number" id="cpf"/><br><br>
+      <label for="cell">Celular:</label><br>
+      <input #input type="number" id="cell"/><br><br>
+      <button (click)="nameC.add(input.value); input.value = ''">Cadastrar</button><hr />
+    </form>
+  <ol>
     <li *ngFor="let c of nameC.getList(); index as i">
       {{c.name}}
-      <button (click)="nameC.remove(i)">-</button>
+      <button (click)="nameC.remove(i)">Excluir</button>
     </li>
-  </ul>
-  <input #input type="number" />
-  <ul>
-    <li *ngFor="let c of nameC.getList(); index as i">
-      {{c.name}}
-      <button (click)="nameC.remove(i)">-</button>
-    </li>
-  </ul>
-  <button (click)="nameC.add(input.value); input.value = ''">Cadastrar</button>
-  <hr />
+  </ol>
   </div>
   </body>
 </html>
