3 files modified, 1 added

--- a/src/app/components/cadastro-cliente/cadastro-cliente.component.html
+++ b/src/app/components/cadastro-cliente/cadastro-cliente.component.html
@@ -6,23 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-  <div class="container-fluid">
-    <form>
-      <h5>Cadastro de cliente</h5>
-      <label for="name">Nome completo:</label><br>
-      <input #input type="text" id="name"/><br><br>
-      <label for="cpf">CPF:</label><br>
-      <input #input type="number" id="cpf"/><br><br>
-      <label for="cell">Celular:</label><br>
-      <input #input type="number" id="cell"/><br><br>
-      <button (click)="nameC.add(input.value); input.value = ''">Cadastrar</button><hr />
-    </form>
-  <ol>
-    <li *ngFor="let c of nameC.getList(); index as i">
-      {{c.name}}
-      <button (click)="nameC.remove(i)">Excluir</button>
-    </li>
-  </ol>
-  </div>
+    <div>
+      <form>
+        <fieldset>
+          <legend>Cadastro de cliente</legend>
+          <label for="name">Nome completo:</label><br>
+          <input #input type="text" id="name"/><br><br>
+          <label for="cpf">CPF:</label><br>
+          <input #input type="number" id="cpf"/><br><br>
+          <label for="cell">Celular:</label><br>
+          <input #input type="number" id="cell"/><br><br>
+          <button (click)="nameC.add(input.value); input.value = ''">Cadastrar</button><hr />
+        </fieldset>
+      </form>
+      <ol>
+        <li *ngFor="let c of nameC.getList(); index as i">
+          {{c.name}}
+          <button (click)="nameC.remove(i)">Excluir</button>
+        </li>
+      </ol>
+    </div>  
   </body>
 </html>
