--- a/src/app/components/agendamentos/agendamentos.component.html
+++ b/src/app/components/agendamentos/agendamentos.component.html
@@ -7,7 +7,7 @@
   </head>
   <body>
   <div class="container-fluid">
-    <h5>Agendamentos:</h5>
+    <h5>Agenda</h5>
     <br/>
       <p>
         blablabla
