--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,13 +18,13 @@
           <a class="nav-link active" aria-current="page" [routerLink]="['/']">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/agendamentos']">Agenda</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['/cadastro-cliente']">Cadastro de cliente</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/cadastro-profissional']">Cadastro de profissional</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/agendamentos']">Agendamentos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/sobre']">Sobre</a>
