--- a/src/app/components/sobre/sobre.component.html
+++ b/src/app/components/sobre/sobre.component.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-  <div class="container-fluid">
-  <h5>Sobre:</h5>
+  <div class="backmid">
+  <h4>Sobre:</h4>
   <br/>
     <p>
       Nome: Karen Livia Alves.
@@ -17,6 +17,7 @@
     </p>
     <p>GitHub: <a href="https://github.com/KarenLivia"> https://github.com/KarenLivia</a>
     </p>
+  <hr/>
   </div>
   </body>
 </html>
