--- a/src/app/components/cadastro-profissional/cadastro-profissional.component.html
+++ b/src/app/components/cadastro-profissional/cadastro-profissional.component.html
@@ -15,7 +15,8 @@
           <input #input type="text" id="funcao"/><br><br>
           <label for="servicos">Serviços:</label><br>
           <input #input type="text" id="servicos"/><br><br>
-    <button (click)="cadastroP.add(input.value); input.value = ''">Cadastrar</button>
+    <button (click)="cadastroP.add(input.value); input.value = ''">Cadastrar</button>&nbsp;&nbsp;
+    <button type="reset" >Limpar</button>
     <hr />
       </form>
       <ol>
