--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,16 +8,15 @@
   <body>
     <div class="backmid">
       <form>
-        <fieldset>
-          <legend>Login</legend>
+          <h4>Login</h4><br>
           <label for="name">Usuário:</label><br>
           <input #input type="text" id="name"/><br><br>
           <label for="senha">Senha:</label><br>
           <input #input type="password" id="senha"/><br><br>
           <button type="button">Entrar</button>&nbsp;&nbsp;
-          <button type="button">Limpar</button>
-        </fieldset>
-      </form>
+          <button type="reset" >Limpar</button>
+      </form><br>
+      <p class="link"><a href="https://angular-ivy-stmrnb.stackblitz.io/cadastro-profissional">Criar conta</a></p>
       <hr />
       <!--<ol>
         <li *ngFor="let c of nameC.getList(); index as i">
