--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,7 +16,7 @@
           <button type="button">Entrar</button>&nbsp;&nbsp;
           <button type="reset" >Limpar</button>
       </form><br>
-      <p class="link"><a href="https://angular-ivy-stmrnb.stackblitz.io/cadastro-profissional">Criar conta</a></p>
+      <p class="link"><a href="https://angular-ivy-stmrnb.stackblitz.io/cadastro-profissional">Criar conta</a></p> <!-- Se quiser, pode substituir por uma rota. -->
       <hr />
       <!--<ol>
         <li *ngFor="let c of nameC.getList(); index as i">
