--- a/src/app/components/cadastro-cliente/cadastro-cliente.component.html
+++ b/src/app/components/cadastro-cliente/cadastro-cliente.component.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="backmid">
-      <form>
+      <form class="formCad">
           <h4>Cadastro de cliente</h4><br>
           <label for="name">Nome completo:</label><br>
           <input #input type="text" id="name"/><br><br>
