--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,18 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="backmid">
-      <form>
+    <div class="backmid"><br>
+      <form class="login">
           <h4>Login</h4><br>
-          <label for="name">Usuário:</label><br>
+          <label for="name">Usuário</label><br>
           <input #input type="text" id="name"/><br><br>
-          <label for="senha">Senha:</label><br>
+          <label for="senha">Senha</label><br>
           <input #input type="password" id="senha"/><br><br>
-          <button type="button">Entrar</button>&nbsp;&nbsp;
-          <button type="reset" >Limpar</button>
-      </form><br>
-      <p class="link"><a href="https://angular-ivy-stmrnb.stackblitz.io/cadastro-profissional">Criar conta</a></p> <!-- Se quiser, pode substituir por uma rota. -->
-      <hr />
+            <button type="button">Entrar</button>&nbsp;&nbsp;
+            <button type="reset" >Limpar</button><br><br>
+            <p class="link"><a href="https://angular-ivy-stmrnb.stackblitz.io/cadastro-profissional">Criar conta</a></p> <!-- Se quiser, pode substituir por uma rota. -->
+        </form>
       <!--<ol>
         <li *ngFor="let c of nameC.getList(); index as i">
           {{c.name}}
@@ -26,4 +25,5 @@
       </ol>-->
     </div>  
   </body>
+  <footer></footer>
 </html>
