--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
 /* Add application styles & imports to this file! */
+html {
+  min-height: 150%;
+  background-image: url(https://imgbox.com/0QtkYrQ4);
+  background-position: left;
+  background-repeat: no-repeat;
+}
 
 button {
   border-radius: 8px;
@@ -13,9 +19,25 @@ button:active {
 }
 
 .backmid{
-  background-color: #eee4f1;
+  background-color: #f6f2f7
 }
 
 .link{
   font-size: 12px;
+}
+
+.login{
+  margin: auto;
+  width: 12%;
+  border: 1px solid #7b3e8e;
+  padding: 10px;
+  text-align: center;
+}
+
+.formCad{
+  margin: auto;
+  width: 15%;
+  border: 1px solid #7b3e8e;
+  padding: 10px;
+  text-align: center;
 }
