--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* Add application styles & imports to this file! */
 html {
   min-height: 150%;
-  background-image: url(https://imgbox.com/0QtkYrQ4);
+  background-image: url(https://thumbs2.imgbox.com/f9/e6/0QtkYrQ4_t.png);
   background-position: left;
   background-repeat: no-repeat;
 }
