--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,4 @@
 /* Add application styles & imports to this file! */
-html {
-  min-height: 150%;
-  background-image: url(https://thumbs2.imgbox.com/f9/e6/0QtkYrQ4_t.png);
-  background-position: left;
-  background-repeat: no-repeat;
-}
-
 button {
   border-radius: 8px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.10);
@@ -19,7 +12,7 @@ button:active {
 }
 
 .backmid{
-  background-color: #f6f2f7
+  background-color: #e6e1e7;
 }
 
 .link{
@@ -40,4 +33,9 @@ button:active {
   border: 1px solid #7b3e8e;
   padding: 10px;
   text-align: center;
+  background-color: #f6f2f7
+}
+
+.agenda{
+
 }
