--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="backmid"><br>
+    <div class="backmid"><hr />
       <form class="login">
           <h4>Login</h4><br>
           <label for="name">Usuário</label><br>
@@ -17,6 +17,7 @@
             <button type="reset" >Limpar</button><br><br>
             <p class="link"><a href="https://angular-ivy-stmrnb.stackblitz.io/cadastro-profissional">Criar conta</a></p> <!-- Se quiser, pode substituir por uma rota. -->
         </form>
+        <hr />
       <!--<ol>
         <li *ngFor="let c of nameC.getList(); index as i">
           {{c.name}}
