--- a/src/app/components/cadastro-profissional/cadastro-profissional.component.html
+++ b/src/app/components/cadastro-profissional/cadastro-profissional.component.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="backmid">
+      <hr />
       <form class="formCad">
         <h4>Cadastro de profissional</h4><br>
           <label for="name">Nome completo:</label><br>
@@ -23,13 +24,15 @@
     <button (click)="cadastroP.add(input.value); input.value = ''">Cadastrar</button>&nbsp;&nbsp;
     <button type="reset" >Limpar</button>
       </form>
+      <hr />
+    </div>
+    <div>
       <ol>
         <li *ngFor="let c of cadastroP.getList(); index as i">
           {{c.name}}
           <button (click)="cadastroP.remove(i)">Excluir</button>
         </li>
       </ol>
-      <hr />
     </div>
   </body>
 </html>
