--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,7 @@ button:active {
   border: 1px solid #7b3e8e;
   padding: 10px;
   text-align: center;
+  background-color: #f6f2f7
 }
 
 .formCad{
