3 files modified, 3 added

--- a/src/app/components/sobre/sobre.component.html
+++ b/src/app/components/sobre/sobre.component.html
@@ -6,18 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-  <div class="backmid">
-  <h4>Sobre:</h4>
-  <br/>
-    <p>
-      Nome: Karen Livia Alves.
-    </p>
-    <p>
-      RA: 0050831921045.
-    </p>
-    <p>GitHub: <a href="https://github.com/KarenLivia"> https://github.com/KarenLivia</a>
-    </p>
-  <hr/>
-  </div>
+    <div class="backmid"><hr/>
+      <form class="formCad">
+        <h4>Sobre:</h4>
+        <br/>
+          <p>Nome: Karen Livia Alves.</p>
+          <p>RA: 0050831921045.</p>
+          <p>GitHub: <a href="https://github.com/KarenLivia"> https://github.com/KarenLivia</a></p> 
+      </form>
+      <hr/>
+    </div>
   </body>
 </html>
