--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -27,6 +27,9 @@
           <a class="nav-link" [routerLink]="['/cadastro-profissional']">Cadastro de profissional</a>
         </li>
         <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/cadastro-servico']">Cadastro de serviço</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" [routerLink]="['/sobre']">Sobre</a>
         </li>
         <li class="nav-item">
