--- a/src/app/components/cadastro-cliente/cadastro-cliente.component.html
+++ b/src/app/components/cadastro-cliente/cadastro-cliente.component.html
@@ -8,7 +8,7 @@
   <body>
     <div class="backmid">
       <hr />
-      <form class="formCad">
+      <form>
           <h4>Cadastro de cliente</h4><br>
           <label for="name">Nome completo:</label><br>
           <input #input type="text" id="name"/><br><br>
