--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="backmid"><hr />
-      <form class="login">
+      <form>
           <h4>Login</h4><br>
           <label for="name">Usuário</label><br>
           <input #input type="text" id="name"/><br><br>
