--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* Add application styles & imports to this file! */
+html{
+  background-color: #e6e1e7;
+}
+
 button {
   border-radius: 8px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.10);
