--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,6 +10,7 @@
       aria-expanded="false"
       aria-label="Toggle navigation"
     >
+    <!-- Eu quero que ao clicar no item do menu, a navbar se recolha automaticamente-->
     <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
