6 files modified, 1 added

--- a/src/app/components/agendamentos/agendamentos.component.html
+++ b/src/app/components/agendamentos/agendamentos.component.html
@@ -26,7 +26,7 @@
             <button type="button">Agendar</button>&nbsp;&nbsp;
             <button type="reset" >Limpar</button><br><br>
             <p class="link"><a href="https://angular-ivy-stmrnb.stackblitz.io/cadastro-profissional">Criar conta</a></p> <!-- Se quiser, pode substituir por uma rota. -->
-        </form>
+        </form><br>
       <!--<ol>
         <li *ngFor="let c of nameC.getList(); index as i">
           {{c.name}}
@@ -36,4 +36,7 @@
     </div>  
     <p>Aqui aparecerão os agendamentos</p>
   </body>
+  <footer>
+  <p>Todos os direitos reservados.</p>
+</footer>
 </html>
