--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,25 +8,18 @@
   <body>
     <div class="backmid"><hr />
       <form>
-          <h4>Login</h4><br>
-          <label for="name">Usuário</label><br>
-          <input #input type="text" id="name"/><br><br>
-          <label for="senha">Senha</label><br>
-          <input #input type="password" id="senha"/><br><br>
-            <button type="button">Entrar</button>&nbsp;&nbsp;
-            <button type="reset" >Limpar</button><br><br>
-            <p class="link"><a href="https://angular-ivy-stmrnb.stackblitz.io/cadastro-profissional">Criar conta</a></p> <!-- Se quiser, pode substituir por uma rota. -->
-        </form>
-        <hr />
-      <!--<ol>
-        <li *ngFor="let c of nameC.getList(); index as i">
-          {{c.name}}
-          <button (click)="nameC.remove(i)">Excluir</button>
-        </li>
-      </ol>-->
+        <h4>Login</h4><br>
+        <label for="name">Usuário</label><br>
+        <input #input type="text" id="name"/><br><br>
+        <label for="senha">Senha</label><br>
+        <input #input type="password" id="senha"/><br><br>
+        <button type="button">Entrar</button>&nbsp;&nbsp;
+        <button type="reset" >Limpar</button><br><br>
+        <p class="link"><a href="https://angular-ivy-stmrnb.stackblitz.io/cadastro-profissional">Criar conta</a></p> <!-- Se quiser, pode substituir por uma rota. -->
+      </form><br>
     </div>  
   </body>
   <footer>
-    
+    <p>Todos os direitos reservados.</p>
   </footer>
 </html>
