--- a/src/app/components/sobre/sobre.component.html
+++ b/src/app/components/sobre/sobre.component.html
@@ -13,8 +13,10 @@
           <p>Nome: Karen Livia Alves.</p>
           <p>RA: 0050831921045.</p>
           <p>GitHub: <a href="https://github.com/KarenLivia"> https://github.com/KarenLivia</a></p> 
-      </form>
-      <hr/>
+      </form><br>
     </div>
   </body>
+  <footer>
+  <p>Todos os direitos reservados.</p>
+</footer>
 </html>
