--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,20 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div class="backmid"><hr />
-      <form>
-        <h4>Login</h4><br>
-        <label for="name">Usuário</label><br>
-        <input #input type="text" id="name"/><br><br>
-        <label for="senha">Senha</label><br>
-        <input #input type="password" id="senha"/><br><br>
-        <button type="button">Entrar</button>&nbsp;&nbsp;
-        <button type="reset" >Limpar</button><br><br>
-        <p class="link"><a href="https://angular-ivy-stmrnb.stackblitz.io/cadastro-profissional">Criar conta</a></p> <!-- Se quiser, pode substituir por uma rota. -->
-      </form><br>
-    </div>  
+    <hello name="{{ name }}"></hello>
+    <hr />
+    <div *ngIf="error" style="color: red">
+      <hr/>
+      <div *ngIf="error.message">{{ error.message}}</div>
+      <div *ngIf="!error.message">{{ error | json}}</div>
+      <hr/>
+    </div>
+    <div *ngIf="!auth">
+      <div>Usuário</div>
+      <div><input type="text" [(ngModel)]="login" /></div>
+      <div>Senha</div>
+      <div><input type="password" [(ngModel)]="password" /></div>
+      <hr />
+      <div *ngIf="loading">Processando...</div>
+      <div *ngIf="!loading">
+        <input type="button" value="Entrar" (click)="postLogin()" />
+      </div>
+    </div>
+    <div *ngIf="auth">
+      <div>
+        Bem vindo, {{ auth.username }}
+        <input type="button" value="Sair" (click)="postLogout()" />
+      </div>
+      <hr />
+      <div *ngIf="loading">Processando...</div>
+      <button *ngIf="!loading" (click)="getList()">Atualizar pessoas físicas</button>
+      <div *ngIf="list">
+        <table>
+          <tr>
+            <th>id</th>
+            <th>nome</th>
+            <th>endereço</th>
+          </tr>
+          <tr *ngFor="let item of list">
+            <td>{{ item['id'] }}</td>
+            <td>{{ item['nome'] }}</td>
+            <td>{{ item['endereco'] }}</td>
+          </tr>
+        </table>
+      </div>
+    </div>   
   </body>
   <footer>
     <p>Todos os direitos reservados.</p>
   </footer>
 </html>
+
